ui/src/styles/SideBar.css
:root {
  --sidebar-width-collapsed: 50px;
  --sidebar-width-expanded: 190px;
}

.sidebar {
  min-width: var(--sidebar-width-collapsed);
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  z-index: 100;
  /* Behind the navbar */
  padding: 48px 0 0;
  /* Height of navbar */
  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
}

.sidebar-sticky {
  position: relative;
  top: 0;
  height: calc(100vh - 48px);
  padding-top: 0.5rem;
  overflow-x: hidden;
  overflow-y: auto;
  /* Scrollable contents if viewport is shorter than content. */
}

@supports ((position: -webkit-sticky) or (position: sticky)) {
  .sidebar-sticky {
    position: -webkit-sticky;
    position: sticky;
  }
}

.sidebar .nav-link {
  font-weight: 500;
  color: #333;
}

.sidebar .nav-link .feather {
  margin-right: 4px;
  color: #999;
}

.sidebar .nav-link.active {
  color: #007bff;
}

.sidebar .nav-link:hover .feather,
.sidebar .nav-link.active .feather {
  color: inherit;
}

.sidebar-heading {
  font-size: 0.75rem;
  text-transform: uppercase;
}

.sidebar .nav-link.disabled {
  color: #999;
}

/* fixed sidebar width on viewports > sm */
.navbar-brand,
#sidebarMenu {
  width: var(--sidebar-width-expanded) !important;
  flex: 0 0 var(--sidebar-width-expanded) !important;
  max-width: var(--sidebar-width-expanded) !important;
}

.navbar-brand img {
  margin: 0 auto;
}

main[role="main"] {
  width: calc(100% - var(--sidebar-width-expanded)) !important;
  flex: 0 0 calc(100% - var(--sidebar-width-expanded)) !important;
  max-width: calc(100% - var(--sidebar-width-expanded)) !important;
}

/* fixed sidebar width on viewports xs + sm */
@media (max-width: 767.98px) {
  .navbar-brand,
  #sidebarMenu {
    width: var(--sidebar-width-collapsed) !important;
    flex: 0 0 var(--sidebar-width-collapsed) !important;
    max-width: var(--sidebar-width-collapsed) !important;
  }

  .navbar-brand img {
    margin: 0 auto;
  }

  main[role="main"] {
    width: calc(100% - var(--sidebar-width-collapsed)) !important;
    flex: 0 0 calc(100% - var(--sidebar-width-collapsed)) !important;
    max-width: calc(100% - var(--sidebar-width-collapsed)) !important;
  }
}

